THRIFT-671. rb: Ruby compact protocol implementation gets mixed up when there are fields that don't fit in the delta space

This patch adds a test and a fix for the problem.

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@896712 13f79535-47bb-0310-9956-ffa450edef68